syntax = "proto3";

package org.volunteered.libs.common.v1;

option java_multiple_files = true;
option java_package = "org.volunteered.libs.common.v1";

import "validate/validate.proto";

message User {
  int64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
  string email = 5 [(validate.rules).string.email = true];
  string country = 6;
  optional string city = 7;
  optional string bio = 8;
  optional Gender gender = 9;
  repeated string main_skills = 10;
  repeated string other_skills = 11;
  repeated string spoken_languages = 12;
  optional string cv = 13;
  optional string portfolio = 14;
  optional string profile_photo = 15;
  optional WebsiteAndSocialMediaUrls web_and_social_urls = 16;
}

message Organization {
  string name = 1;
  string email = 2;
  string bio = 3;
  optional string logo = 4;
  repeated string phone = 5;
  optional WebsiteAndSocialMediaUrls web_and_social_urls = 6;
  OrganizationSubsidiary hq = 7;
  optional uint32 founded = 8;
  optional string industry = 9;
  optional string founder = 10;
  optional uint32 number_of_employees = 11;
  repeated string benefits = 12;
}

message OrganizationSubsidiary {
  string city = 1;
  string country = 2;
  optional string name = 3;
  optional Location location = 4;
  optional string description = 5;
}

enum Gender {
  MALE = 0;
  FEMALE = 1;
  NON_BINARY = 2;
}

message WebsiteAndSocialMediaUrls {
  optional string website = 1;
  optional string linkedin = 2;
  optional string facebook = 3;
  optional string twitter = 4;
  optional string skype = 5;
  optional string github = 6;
}

message Location {
  double latitude = 1 [(validate.rules).double = { gte: -90,  lte: 90 }];
  double longitude = 2 [(validate.rules).double = { gte: -180, lte: 180 }];
}
